# pwp_pricetracker

./: .gitignore  README.md  db_init.py  meetings.md  pylintrc.toml  pyproject.toml  requirements.txt  test.db
instance/: development.db
pricetracker/: __init__.py  api.py  cli.py  db.py  models.py  utils.py
tests/: test_db.py
